# DiffySwerveModule

./: CMakeLists.txt  DRV8245HW.cpp  DRV8245HW.h  Motor.cpp  Motor.h  MotorTesting.cpp  Params.h  blink.c  blink.cpp
DRV8245HW/: DRV8245HW.cpp  DRV8245HW.h
I2C/: main_rec_i2c.cpp  main_rec_i2c.h  maini2c.cpp  maini2c.h  modulei2c.cpp  modulei2c.h
Kinematics/: kinematics.cpp  kinematics.h
MotorTesting/: CMakeLists.txt  MotorTesting.cpp  pico_sdk_import.cmake
MotorTesting/AS5600/: AS5600.cpp
MotorTesting/DRV8245HW/: DRV8245HW.cpp  DRV8245HW.h
MotorTesting/EncoderLib/: quadrature_encoder_substep.c  quadrature_encoder_substep.h
MotorTesting/dwm_pico_AS5600/: dwm_pico_AS5600.h
STRUCTS/: structs.h
UART_COMMS/: uart_comms.cpp  uart_comms.h
lib/dwm_pico_AS5600/: dwm_pico_AS5600.c
pico_as5600/: pico_as5600.c  pico_as5600.h
